# PETRE

./: .gitignore  README.md  __init__.py  annotation_generator.py  cli.py  config.json  config.py  contexts.py  core.py  import_utils.py  interfaces.py  main.py  petre.py  petre_original.py  py.typed  pyproject.toml  requirements.txt
Datasets/Wiki553/Annotations/: Annotations_St.NER3.json
Outputs/Wiki553/BG_Abstracts/Annotations_Greedy/: Annotations_PETRE_Start.json  Annotations_PETRE_k=10.json  Annotations_PETRE_k=2.json  Annotations_PETRE_k=3.json  Annotations_PETRE_k=5.json  Annotations_PETRE_k=7.json
Outputs/Wiki553/BG_Abstracts/Annotations_Presidio/: Annotations_PETRE_k=10.json  Annotations_PETRE_k=2.json  Annotations_PETRE_k=3.json  Annotations_PETRE_k=5.json  Annotations_PETRE_k=7.json
Outputs/Wiki553/BG_Abstracts/Annotations_Random/: Annotations_PETRE_k=10.json  Annotations_PETRE_k=2.json  Annotations_PETRE_k=3.json  Annotations_PETRE_k=5.json  Annotations_PETRE_k=7.json
Outputs/Wiki553/BG_Abstracts/Annotations_St.NER3/: Annotations_PETRE_Start.json  Annotations_PETRE_k=10.json  Annotations_PETRE_k=2.json  Annotations_PETRE_k=3.json  Annotations_PETRE_k=5.json  Annotations_PETRE_k=7.json
Outputs/Wiki553/BG_Abstracts/Annotations_St.NER4/: Annotations_PETRE_k=10.json  Annotations_PETRE_k=2.json  Annotations_PETRE_k=3.json  Annotations_PETRE_k=5.json  Annotations_PETRE_k=7.json
Outputs/Wiki553/BG_Abstracts/Annotations_St.NER7/: Annotations_PETRE_Start.json  Annotations_PETRE_k=10.json  Annotations_PETRE_k=2.json  Annotations_PETRE_k=3.json  Annotations_PETRE_k=5.json  Annotations_PETRE_k=7.json
Outputs/Wiki553/BG_Abstracts/Annotations_Word2Vec/: Annotations_PETRE_Start.json  Annotations_PETRE_k=10.json  Annotations_PETRE_k=2.json  Annotations_PETRE_k=3.json  Annotations_PETRE_k=5.json  Annotations_PETRE_k=7.json
Outputs/Wiki553/BG_Abstracts/Original_Ranks/: Ranks_Greedy.csv  Ranks_Original.csv  Ranks_Presidio.csv  Ranks_Random.csv  Ranks_St.NER3.csv  Ranks_St.NER4.csv  Ranks_St.NER7.csv  Ranks_Word2Vec.csv
Outputs/Wiki553/BG_Abstracts/PETRE_Ranks/: Ranks_Greedy_10.csv  Ranks_Greedy_2.csv  Ranks_Greedy_3.csv  Ranks_Greedy_5.csv  Ranks_Greedy_7.csv  Ranks_Presidio_10.csv  Ranks_Presidio_2.csv  Ranks_Presidio_3.csv  Ranks_Presidio_5.csv  Ranks_Presidio_7.csv  Ranks_Random_10.csv  Ranks_Random_2.csv  Ranks_Random_3.csv  Ranks_Random_5.csv  Ranks_Random_7.csv  Ranks_St.NER3_10.csv  Ranks_St.NER3_2.csv  Ranks_St.NER3_3.csv  Ranks_St.NER3_5.csv  Ranks_St.NER3_7.csv  Ranks_St.NER4_10.csv  Ranks_St.NER4_2.csv  Ranks_St.NER4_3.csv  Ranks_St.NER4_5.csv  Ranks_St.NER4_7.csv  Ranks_St.NER7_10.csv  Ranks_St.NER7_2.csv  Ranks_St.NER7_3.csv  Ranks_St.NER7_5.csv  Ranks_St.NER7_7.csv  Ranks_Word2Vec_10.csv  Ranks_Word2Vec_2.csv  Ranks_Word2Vec_3.csv  Ranks_Word2Vec_5.csv  Ranks_Word2Vec_7.csv
Outputs/Wiki553/BG_Bodies+Abstracts/Annotations_Greedy/: Annotations_PETRE_k=10.json  Annotations_PETRE_k=2.json  Annotations_PETRE_k=3.json  Annotations_PETRE_k=5.json  Annotations_PETRE_k=7.json
Outputs/Wiki553/BG_Bodies+Abstracts/Annotations_Presidio/: Annotations_PETRE_k=10.json  Annotations_PETRE_k=2.json  Annotations_PETRE_k=3.json  Annotations_PETRE_k=5.json  Annotations_PETRE_k=7.json
Outputs/Wiki553/BG_Bodies+Abstracts/Annotations_Random/: Annotations_PETRE_k=10.json  Annotations_PETRE_k=2.json  Annotations_PETRE_k=3.json  Annotations_PETRE_k=5.json  Annotations_PETRE_k=7.json
Outputs/Wiki553/BG_Bodies+Abstracts/Annotations_St.NER3/: Annotations_PETRE_k=10.json  Annotations_PETRE_k=2.json  Annotations_PETRE_k=3.json  Annotations_PETRE_k=5.json  Annotations_PETRE_k=7.json
Outputs/Wiki553/BG_Bodies+Abstracts/Annotations_St.NER4/: Annotations_PETRE_k=10.json  Annotations_PETRE_k=2.json  Annotations_PETRE_k=3.json  Annotations_PETRE_k=5.json  Annotations_PETRE_k=7.json
Outputs/Wiki553/BG_Bodies+Abstracts/Annotations_St.NER7/: Annotations_PETRE_k=10.json  Annotations_PETRE_k=2.json  Annotations_PETRE_k=3.json  Annotations_PETRE_k=5.json  Annotations_PETRE_k=7.json
Outputs/Wiki553/BG_Bodies+Abstracts/Annotations_Word2Vec/: Annotations_PETRE_k=10.json  Annotations_PETRE_k=2.json  Annotations_PETRE_k=3.json  Annotations_PETRE_k=5.json  Annotations_PETRE_k=7.json
Outputs/Wiki553/BG_Bodies+Abstracts/Original_Ranks/: Ranks_Greedy.csv  Ranks_Manual.csv  Ranks_Original.csv  Ranks_Presidio.csv  Ranks_Random.csv  (+4 more)
data/TAB/: Annotations_test_Manual.json  Annotations_test_Presidio.json  Annotations_test_St.NER3.json  Annotations_test_St.NER4.json  Annotations_test_St.NER7.json  TAB_test_BK=Original.json
data/Wiki553/: Annotations_Manual.json  Annotations_St.NER4.json  Annotations_St.NER7.json
examples/: Annotations_Presidio.json  Annotations_Word2Vec_t=0.25.json  Wiki553.json  config.json
(+82 files in other folders)
